--- a/index.html
+++ b/index.html
@@ -11,104 +11,160 @@
 <body>
     <h1>Sudoku</h1>
     <div class = "board">
-        <div class = 'block 00'>
-            <div class = 'box 00'></div>
-            <div class = 'box 01'></div>
-            <div class = 'box 02'></div>
-            <div class = 'box 10'></div>
-            <div class = 'box 11'></div>
-            <div class = 'box 12'></div>
-            <div class = 'box 20'></div>
-            <div class = 'box 21'></div>
-            <div class = 'box 22'></div>
-        </div>
-        <div class = 'block 01'>
-            <div class = 'box 00'></div>
-            <div class = 'box 01'></div>
-            <div class = 'box 02'></div>
-            <div class = 'box 10'></div>
-            <div class = 'box 11'></div>
-            <div class = 'box 12'></div>
-            <div class = 'box 20'></div>
-            <div class = 'box 21'></div>
-            <div class = 'box 22'></div>
-        </div>
-        <div class = 'block 02'>
-            <div class = 'box 00'></div>
-            <div class = 'box 01'></div>
-            <div class = 'box 02'></div>
-            <div class = 'box 10'></div>
-            <div class = 'box 11'></div>
-            <div class = 'box 12'></div>
-            <div class = 'box 20'></div>
-            <div class = 'box 21'></div>
-            <div class = 'box 22'></div>
-        </div>
-            <div class = 'block 10'>
-            <div class = 'box 00'></div>
-            <div class = 'box 01'></div>
-            <div class = 'box 02'></div>
-            <div class = 'box 10'></div>
-            <div class = 'box 11'></div>
-            <div class = 'box 12'></div>
-            <div class = 'box 20'></div>
-            <div class = 'box 21'></div>
-            <div class = 'box 22'></div>
-        </div>
-        <div class = 'block 11'>
-            <div class = 'box 00'></div>
-            <div class = 'box 01'></div>
-            <div class = 'box 02'></div>
-            <div class = 'box 10'></div>
-            <div class = 'box 11'></div>
-            <div class = 'box 12'></div>
-            <div class = 'box 20'></div>
-            <div class = 'box 21'></div>
-            <div class = 'box 22'></div>
-        </div>
-        <div class = 'block 12'>
-            <div class = 'box 00'></div>
-            <div class = 'box 01'></div>
-            <div class = 'box 02'></div>
-            <div class = 'box 10'></div>
-            <div class = 'box 11'></div>
-            <div class = 'box 12'></div>
-            <div class = 'box 20'></div>
-            <div class = 'box 21'></div>
-            <div class = 'box 22'></div>
-        </div>
-        <div class = 'block 20'>
-            <div class = 'box 00'></div>
-            <div class = 'box 01'></div>
-            <div class = 'box 02'></div>
-            <div class = 'box 10'></div>
-            <div class = 'box 11'></div>
-            <div class = 'box 12'></div>
-            <div class = 'box 20'></div>
-            <div class = 'box 21'></div>
-            <div class = 'box 22'></div>
-        </div>
-        <div class = 'block 21'>
-            <div class = 'box 00'></div>
-            <div class = 'box 01'></div>
-            <div class = 'box 02'></div>
-            <div class = 'box 10'></div>
-            <div class = 'box 11'></div>
-            <div class = 'box 12'></div>
-            <div class = 'box 20'></div>
-            <div class = 'box 21'></div>
-            <div class = 'box 22'></div>
-        </div>
-        <div class = 'block 22'>
-            <div class = 'box 00'></div>
-            <div class = 'box 01'></div>
-            <div class = 'box 02'></div>
-            <div class = 'box 10'></div>
-            <div class = 'box 11'></div>
-            <div class = 'box 12'></div>
-            <div class = 'box 20'></div>
-            <div class = 'box 21'></div>
-            <div class = 'box 22'></div>
+        <div class = "blocks">
+            <table class = 'block 00'>
+                <tr>
+                    <td class = 'box 00'></div>
+                    <td class = 'box 01'></div>
+                    <td class = 'box 02'></div>
+                </tr>
+                <tr>
+                    <td class = 'box 10'></div>
+                    <td class = 'box 11'></div>
+                    <td class = 'box 12'></div>
+                </tr>
+                <tr>
+                    <td class = 'box 20'></div>
+                    <td class = 'box 21'></div>
+                    <td class = 'box 22'></div>
+                </tr>
+            </table>
+            <table class = 'block 01'>
+                <tr>
+                    <td class = 'box 00'></div>
+                    <td class = 'box 01'></div>
+                    <td class = 'box 02'></div>
+                </tr>
+                <tr>
+                    <td class = 'box 10'></div>
+                    <td class = 'box 11'></div>
+                    <td class = 'box 12'></div>
+                </tr>
+                <tr>
+                    <td class = 'box 20'></div>
+                    <td class = 'box 21'></div>
+                    <td class = 'box 22'></div>
+                </tr>
+            </table>
+            <table class = 'block 02'>
+                <tr>
+                    <td class = 'box 00'></div>
+                    <td class = 'box 01'></div>
+                    <td class = 'box 02'></div>
+                </tr>
+                <tr>
+                    <td class = 'box 10'></div>
+                    <td class = 'box 11'></div>
+                    <td class = 'box 12'></div>
+                </tr>
+                <tr>
+                    <td class = 'box 20'></div>
+                    <td class = 'box 21'></div>
+                    <td class = 'box 22'></div>
+                </tr>
+            </table>
+            <table class = 'block 10'>
+                <tr>
+                    <td class = 'box 00'></div>
+                    <td class = 'box 01'></div>
+                    <td class = 'box 02'></div>
+                </tr>
+                <tr>
+                    <td class = 'box 10'></div>
+                    <td class = 'box 11'></div>
+                    <td class = 'box 12'></div>
+                </tr>
+                <tr>
+                    <td class = 'box 20'></div>
+                    <td class = 'box 21'></div>
+                    <td class = 'box 22'></div>
+                </tr>
+            </table>
+            <table class = 'block 11'>
+                <tr>
+                    <td class = 'box 00'></div>
+                    <td class = 'box 01'></div>
+                    <td class = 'box 02'></div>
+                </tr>
+                <tr>
+                    <td class = 'box 10'></div>
+                    <td class = 'box 11'></div>
+                    <td class = 'box 12'></div>
+                </tr>
+                <tr>
+                    <td class = 'box 20'></div>
+                    <td class = 'box 21'></div>
+                    <td class = 'box 22'></div>
+                </tr>
+            </table>
+            <table class = 'block 12'>
+                <tr>
+                    <td class = 'box 00'></div>
+                    <td class = 'box 01'></div>
+                    <td class = 'box 02'></div>
+                </tr>
+                <tr>
+                    <td class = 'box 10'></div>
+                    <td class = 'box 11'></div>
+                    <td class = 'box 12'></div>
+                </tr>
+                <tr>
+                    <td class = 'box 20'></div>
+                    <td class = 'box 21'></div>
+                    <td class = 'box 22'></div>
+                </tr>
+            </table>
+            <table class = 'block 20'>
+                <tr>
+                    <td class = 'box 00'></div>
+                    <td class = 'box 01'></div>
+                    <td class = 'box 02'></div>
+                </tr>
+                <tr>
+                    <td class = 'box 10'></div>
+                    <td class = 'box 11'></div>
+                    <td class = 'box 12'></div>
+                </tr>
+                <tr>
+                    <td class = 'box 20'></div>
+                    <td class = 'box 21'></div>
+                    <td class = 'box 22'></div>
+                </tr>
+            </table>
+            <table class = 'block 21'>
+                <tr>
+                    <td class = 'box 00'></div>
+                    <td class = 'box 01'></div>
+                    <td class = 'box 02'></div>
+                </tr>
+                <tr>
+                    <td class = 'box 10'></div>
+                    <td class = 'box 11'></div>
+                    <td class = 'box 12'></div>
+                </tr>
+                <tr>
+                    <td class = 'box 20'></div>
+                    <td class = 'box 21'></div>
+                    <td class = 'box 22'></div>
+                </tr>
+            </table>
+            <table class = 'block 22'>
+                <tr>
+                    <td class = 'box 00'></div>
+                    <td class = 'box 01'></div>
+                    <td class = 'box 02'></div>
+                </tr>
+                <tr>
+                    <td class = 'box 10'></div>
+                    <td class = 'box 11'></div>
+                    <td class = 'box 12'></div>
+                </tr>
+                <tr>
+                    <td class = 'box 20'></div>
+                    <td class = 'box 21'></div>
+                    <td class = 'box 22'></div>
+                </tr>
+            </table>
         </div>
     </div>
 
