Getting up to date

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sudoku Solver</title>
     <link href="style.css", rel = "stylesheet">
+    <script src = "solve.js" defer></script>
     <script src = "main.js" defer></script>
     
 </head>
@@ -169,7 +170,9 @@
         </div>
     </div>
 
-    <button>solve</button>
+    <button solve>solve</button>
+    <button clear>clear</button>
+    <button fill>fill</button>
 
 
     
